fix circled-link text not centered on Apple devices

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -57,12 +57,13 @@ a:visited {
   font-size: 14px;
   font-weight: 400;
   margin: 0 auto;
-  padding: 5px 0 4px 0;
+  padding: 5px 0;
   text-align: center;
-  display: table-cell;
-  vertical-align: middle;
   text-transform: uppercase;
   width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .grayed,
